--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -32,9 +33,7 @@
     "primeng": "^7.0.0",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.5.3",
-    "zone.js": "~0.8.26"
-  },
-  "devDependencies": {
+    "zone.js": "~0.8.26",
     "@angular-devkit/build-angular": "^0.6.8",
     "@angular/cli": "^7.2.5",
     "@angular/compiler-cli": "7.2.5",
@@ -55,8 +54,9 @@
     "tslint": "~5.9.1",
     "typescript": "3.2.4"
   },
+  "devDependencies": {},
   "engines": {
-    "node": "8.1.2",
-    "npm": "5.0.3"
+    "node": "10.16.3",
+    "npm": "6.11.3"
   }
 }
