--- a/package.json
+++ b/package.json
@@ -13,35 +13,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.2.5",
-    "@angular/common": "7.2.5",
-    "@angular/compiler": "7.2.5",
-    "@angular/core": "7.2.5",
-    "@angular/forms": "7.2.5",
-    "@angular/http": "^2.1.2",
-    "@angular/platform-browser": "7.2.5",
-    "@angular/platform-browser-dynamic": "7.2.5",
-    "@angular/router": "7.2.5",
+    "@angular-devkit/build-angular": "~0.803.25",
+    "@angular/animations": "8.2.14",
+    "@angular/cli": "^8.3.25",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
+    "@angular/compiler-cli": "8.2.14",
+    "@angular/core": "8.2.14",
+    "@angular/forms": "8.2.14",
+    "@angular/language-service": "8.2.14",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
+    "@angular/router": "8.2.14",
     "@auth0/angular-jwt": "^2.0.0",
-    "chart.js": "^2.7.2",
-    "core-js": "^2.4.1",
-    "font-awesome": "^4.7.0",
-    "moment": "^2.18.1",
-    "ng2-currency-mask": "^4.1.0",
-    "ng2-toasty": "^4.0.3",
-    "primeicons": "^1.0.0",
-    "primeng": "^7.0.0",
-    "rxjs": "^6.2.1",
-    "rxjs-compat": "^6.5.3",
-    "zone.js": "~0.8.26",
-    "@angular-devkit/build-angular": "^0.6.8",
-    "@angular/cli": "^7.2.5",
-    "@angular/compiler-cli": "7.2.5",
-    "@angular/language-service": "7.2.5",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "chart.js": "^2.7.2",
     "codelyzer": "^4.0.1",
+    "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.0.0",
@@ -49,12 +40,22 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "moment": "^2.18.1",
+    "ng2-currency-mask": "^4.1.0",
+    "ng2-toasty": "^4.0.3",
+    "primeicons": "^1.0.0",
+    "primeng": "^7.1.3",
     "protractor": "^5.4.2",
+    "rxjs": "^6.5.4",
+    "rxjs-compat": "^6.5.3",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "3.2.4"
+    "typescript": "3.5.3",
+    "zone.js": "~0.9.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "codelyzer": "^5.0.1"
+  },
   "engines": {
     "node": "10.16.3",
     "npm": "6.11.3"
