--- a/package.json
+++ b/package.json
@@ -13,49 +13,48 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.803.25",
-    "@angular/animations": "8.2.14",
-    "@angular/cli": "^8.3.25",
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/forms": "8.2.14",
-    "@angular/language-service": "8.2.14",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
-    "@angular/router": "8.2.14",
-    "@auth0/angular-jwt": "^2.0.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "chart.js": "^2.7.2",
-    "codelyzer": "^4.0.1",
-    "core-js": "^2.4.1",
+    "@angular-devkit/build-angular": "~0.900.2",
+    "@angular/animations": "9.0.1",
+    "@angular/cli": "^9.0.2",
+    "@angular/common": "9.0.1",
+    "@angular/compiler": "9.0.1",
+    "@angular/compiler-cli": "9.0.1",
+    "@angular/core": "9.0.1",
+    "@angular/forms": "9.0.1",
+    "@angular/language-service": "9.0.1",
+    "@angular/platform-browser": "9.0.1",
+    "@angular/platform-browser-dynamic": "9.0.1",
+    "@angular/router": "9.0.1",
+    "@auth0/angular-jwt": "^4.0.0",
+    "@types/jasmine": "~3.5.3",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "^12.11.1",
+    "chart.js": "^2.9.3",
+    "codelyzer": "^5.1.2",
+    "core-js": "^3.6.4",
     "font-awesome": "^4.7.0",
-    "jasmine-core": "~2.8.0",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-jasmine": "~3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.2",
     "moment": "^2.18.1",
-    "ng2-currency-mask": "^4.1.0",
+    "ng2-currency-mask": "^5.3.1",
     "ng2-toasty": "^4.0.3",
-    "primeicons": "^1.0.0",
-    "primeng": "^7.1.3",
-    "protractor": "^5.4.2",
+    "primeicons": "^2.0.0",
+    "primeng": "^9.0.0-rc.4",
+    "protractor": "^5.4.3",
     "rxjs": "^6.5.4",
-    "rxjs-compat": "^6.5.3",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "3.5.3",
-    "zone.js": "~0.9.1"
+    "rxjs-compat": "^6.5.4",
+    "ts-node": "~8.6.2",
+    "tslib": "^1.10.0",
+    "tslint": "~6.0.0",
+    "typescript": "3.7.5",
+    "zone.js": "~0.10.2"
   },
-  "devDependencies": {
-    "codelyzer": "^5.0.1"
-  },
+  "devDependencies": {},
   "engines": {
     "node": "10.16.3",
     "npm": "6.11.3"
